--- a/Classes/PostWindow.html
+++ b/Classes/PostWindow.html
@@ -14,12 +14,12 @@
 <div class='contents'>
 <div class='header'>
 <div id='label'>SuperCollider CLASSES (extension)</div>
-<div id='categories'><a href='./../Browse.html#GUI>Views'>GUI>Views</a></div>
+<div id='categories'><a href='./../Browse.html#Libraries>ModImprov'>Libraries>ModImprov</a></div>
 <h1>PostWindow</h1>
 <div id='summary'>A call window</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/<a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/PostWindow.sc'>PostWindow.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MainImprov.html">MainImprov</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/PostWindow.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/PostWindow.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MainImprov.html">MainImprov</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/CallWindow.html">CallWindow</a>, <a href="./../Classes/Window.html">Window</a></div>
 </div>
 <div id='toc'>
@@ -27,11 +27,11 @@
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
 <li class='toc3'><a href='#*window'>window</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-addToFork'>addToFork</a> </li>
-<li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+<li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-addLine'>addLine</a> </li>
 <li class='toc3'><a href='#-addLineToFork'>addLineToFork</a> </li>
 <li class='toc3'><a href='#-addPost'>addPost</a> </li>
@@ -64,7 +64,7 @@
 <p>A String for the name of the Window.<tr><td class='argumentname'>bounds<td class='argumentdesc'>
 <p>A Rect for the Window<tr><td class='argumentname'>font<td class='argumentdesc'>
 <p>A Font.<tr><td class='argumentname'>qpalette<td class='argumentdesc'>
-<p>A QPalette.</table></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>A QPalette.</table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-addToFork' href='./../Overviews/Methods.html#addToFork'>addToFork</a> (<span class='argstr'>thisObject</span>, <span class='argstr'>changeTime</span>, <span class='argstr'>changeDev</span>)</h3>
 <div class='method'>
@@ -73,8 +73,8 @@
 <tr><td class='argumentname'>thisObject<td class='argumentdesc'>
 <p>Object to be posted in window.<tr><td class='argumentname'>changeTime<td class='argumentdesc'>
 <p>Change time of routine that writes string into post window.<tr><td class='argumentname'>changeDev<td class='argumentdesc'>
-<p>Change time deviation of routine that writes string into post window.</table></div><h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+<p>Change time deviation of routine that writes string into post window.</table></div><h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-addLine' href='./../Overviews/Methods.html#addLine'>addLine</a> (<span class='argstr'>thisObject</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-addLineToFork' href='./../Overviews/Methods.html#addLineToFork'>addLineToFork</a> (<span class='argstr'>thisObject</span>, <span class='argstr'>changeTime</span>, <span class='argstr'>changeDev</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-addPost' href='./../Overviews/Methods.html#addPost'>addPost</a> (<span class='argstr'>thisObject</span>)</h3>
@@ -176,4 +176,4 @@ w.front;
 
 Window.closeAll;</pre>
 
-<p><div class='doclink'>source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/HelpSource/Classes/PostWindow.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/HelpSource/Classes/PostWindow.schelp</a><br>link::Classes/PostWindow::<br>sc version: 3.7.2</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/HelpSource/Classes/PostWindow.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/HelpSource/Classes/PostWindow.schelp</a><br>link::Classes/PostWindow::<br>sc version: 3.8.0</div></div></body></html>
