--- a/Classes/SynthFile.html
+++ b/Classes/SynthFile.html
@@ -31,6 +31,7 @@
 <li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*path'>path</a> </li>
 <li class='toc3'><a href='#*post'>post</a> </li>
+<li class='toc3'><a href='#*postAll'>postAll</a> </li>
 <li class='toc3'><a href='#*remove'>remove</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
@@ -55,6 +56,7 @@
 <div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*path' href='./../Overviews/Methods.html#path'>path</a> (<span class='argstr'>class: 'filter'</span>)</h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*post' href='./../Overviews/Methods.html#post'>post</a> (<span class='argstr'>class: 'filter'</span>, <span class='argstr'>key</span>)</h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*postAll' href='./../Overviews/Methods.html#postAll'>postAll</a> (<span class='argstr'>class: 'filter'</span>)</h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*remove' href='./../Overviews/Methods.html#remove'>remove</a> (<span class='argstr'>class: 'filter'</span>, <span class='argstr'>key</span>)</h3>
 <h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
