--- a/Classes/CallWindow.html
+++ b/Classes/CallWindow.html
@@ -14,7 +14,7 @@
 <div class='contents'>
 <div class='header'>
 <div id='label'>SuperCollider CLASSES (extension)</div>
-<div id='categories'><a href='./../Browse.html#GUI>Views'>GUI>Views</a></div>
+<div id='categories'><a href='./../Browse.html#Libraries>ModImprov'>Libraries>ModImprov</a></div>
 <h1>CallWindow</h1>
 <div id='summary'>A call window</div>
 </div>
