--- a/Classes/CuspL.html
+++ b/Classes/CuspL.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -20,22 +19,25 @@
 <div id='summary'>Cusp map chaotic generator</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/<a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Chaos.sc'>Chaos.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/CuspN.html">CuspN</a> : <a href="../Classes/ChaosGen.html">ChaosGen</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Chaos.sc'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Chaos.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/CuspN.html">CuspN</a> : <a href="../Classes/ChaosGen.html">ChaosGen</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/CuspN.html">CuspN</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*ar'>ar</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
-<p>A linear-interpolating sound generator based on the difference equation:<pre class='code prettyprint lang-sc'>    x[n+1] = a - b * sqrt(abs(x[n]))</pre>
-
-<p><div class='warning'><span class='warninglabel'>WARNING:</span> revise formulae converted to c like code</div><h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
+<p>A linear-interpolating sound generator based on the difference equation:<pre>    x(n+1) = a - b * sqrt(|x(n)|)</pre>
+<p>sclang code translation:<pre class='code prettyprint lang-sc'>(
+var a = 1.0, b = 1.9, xi = 0, size = 64;
+plot(size.collect { xi = a - (b * sqrt(abs(xi))) });
+)</pre>
+<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*ar' href='./../Overviews/Methods.html#ar'>ar</a> (<span class='argstr'>freq: 22050</span>, <span class='argstr'>a: 1</span>, <span class='argstr'>b: 1.9</span>, <span class='argstr'>xi: 0</span>, <span class='argstr'>mul: 1</span>, <span class='argstr'>add: 0</span>)</h3>
 <div class='supmethod'>From superclass: <a href='./../Classes/CuspN.html'>CuspN</a></div>
 <div class='method'><h4>Arguments:</h4>
@@ -44,9 +46,9 @@
 <p>Iteration frequency in Hertz<tr><td class='argumentname'>a<td class='argumentdesc'>
 <p>Equation variable<tr><td class='argumentname'>b<td class='argumentdesc'>
 <p>Equation variable<tr><td class='argumentname'>xi<td class='argumentdesc'>
-<p>Initial value of x</table></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>Initial value of x</table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>// vary frequency
 { CuspL.ar(MouseX.kr(20, SampleRate.ir), 1.0, 1.99) * 0.3 }.play(s);
@@ -57,4 +59,4 @@
 // as a frequency control
 { SinOsc.ar(CuspL.ar(40, MouseX.kr(0.9,1.1,1), MouseY.kr(1.8,2,1))*800+900)*0.4 }.play(s);</pre>
 
-<p><div class='doclink'>source: <a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/CuspL.schelp'>/Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/CuspL.schelp</a><br>link::Classes/CuspL::<br>sc version: 3.5.5</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/CuspL.schelp'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/CuspL.schelp</a><br>link::Classes/CuspL::<br>sc version: 3.8.0</div></div></body></html>
