--- a/Classes/GlobalHistory.html
+++ b/Classes/GlobalHistory.html
@@ -19,33 +19,33 @@
 <div id='summary'>(Undocumented class)</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/<a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/GlobalHistory.sc'>GlobalHistory.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MainImprov.html">MainImprov</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/GlobalHistory.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/GlobalHistory.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MainImprov.html">MainImprov</a> : <a href="../Classes/Object.html">Object</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
-<li class='toc2'><a href='#Undocumented class methods'>Undocumented class methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*start'>start</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-add'>add</a> </li>
 <li class='toc3'><a href='#-initCallWindow'>initCallWindow</a> </li>
 <li class='toc3'><a href='#-recordHistory'>recordHistory</a> </li>
 <li class='toc3'><a href='#-resume'>resume</a> </li>
 <li class='toc3'><a href='#-stop'>stop</a> </li>
 <li class='toc3'><a href='#-writeHistory'>writeHistory</a> </li>
-</ul></ul><li class='toc1'><a href='#Help template'>Help template</a></li>
+</ul></ul><li class='toc1'><a href='#Help%20template'>Help template</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
 <p>This class is missing documentation.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
-<h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
-<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented class methods'>Undocumented class methods</a></h3>
+<h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
+<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*start' href='./../Overviews/Methods.html#start'>start</a> (<span class='argstr'>fileName</span>, <span class='argstr'>replace</span>)</h3>
 <h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-add' href='./../Overviews/Methods.html#add'>add</a> (<span class='argstr'>arr</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-initCallWindow' href='./../Overviews/Methods.html#initCallWindow'>initCallWindow</a> (<span class='argstr'>fileName</span>, <span class='argstr'>replace: false</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-recordHistory' href='./../Overviews/Methods.html#recordHistory'>recordHistory</a></h3>
@@ -53,7 +53,7 @@
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-resume' href='./../Overviews/Methods.html#resume'>resume</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-stop' href='./../Overviews/Methods.html#stop'>stop</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-writeHistory' href='./../Overviews/Methods.html#writeHistory'>writeHistory</a> (<span class='argstr'>time</span>, <span class='argstr'>arr</span>)</h3>
-<h2><a class='anchor' name='Help template'>Help template</a></h2>
+<h2><a class='anchor' name='Help%20template'>Help template</a></h2>
 
 <p>Copy and paste the text below and save to HelpSource/Classes/GlobalHistory.schelp<pre class='code prettyprint lang-sc'>TITLE:: GlobalHistory
 summary:: (put short description here)
@@ -132,4 +132,4 @@ code::
 (some example code)
 ::
 </pre>
-<div class='doclink'>link::Classes/GlobalHistory::<br>sc version: 3.7.2</div></div></body></html>
+<div class='doclink'>link::Classes/GlobalHistory::<br>sc version: 3.8.0</div></div></body></html>
