--- a/Tutorials/JITLib/jitlib_basic_concepts_01.html
+++ b/Tutorials/JITLib/jitlib_basic_concepts_01.html
@@ -1,24 +1,43 @@
-<html><head><title>jitlib_basic_concepts_01</title><link rel='stylesheet' href='./../../scdoc.css' type='text/css' /><link rel='stylesheet' href='./../../frontend.css' type='text/css' /><link rel='stylesheet' href='./../../custom.css' type='text/css' /><meta http-equiv='Content-Type' content='text/html; charset=UTF-8' /><script src='./../../scdoc.js' type='text/javascript'></script><script src='./../../docmap.js' type='text/javascript'></script><script src='./../../prettify.js' type='text/javascript'></script><script src='./../../lang-sc.js' type='text/javascript'></script><script src='./../../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script><script type='text/javascript'>var helpRoot='./../..';</script></head><ul id='menubar'></ul><body onload='fixTOC();prettyPrint()'><div class='contents'><div class='header'><div id='label'>SuperCollider TUTORIALS/JITLIB</div><div id='categories'><a href='./../../Browse.html#Libraries>JITLib>Tutorials'>Libraries>JITLib>Tutorials</a></div><h1>jitlib_basic_concepts_01</h1><div id='summary'>some placeholders in supercollider</div></div><div class='subheader'>
-<div id='related'>See also: <a href="./../../Overviews/JITLib.html">JITLib</a>, <a href="./../../Tutorials/JITLib/jitlib_basic_concepts_02.html">jitlib_basic_concepts_02</a></div></div><div id='toc'>
-<ul class='toc'><li class='toc1'><a href='#a)_what_is_a_proxy?'>a) What is a proxy?</a></li>
-<ul class='toc'><li class='toc2'><a href='#using_a_ref_as_a_proxy'>using a Ref as a proxy</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#using_a_function_as_a_proxy'>using a Function as a proxy</a></li>
-<ul class='toc'></ul></ul><li class='toc1'><a href='#b)_nodeproxy'>b) NodeProxy</a></li>
+<html><head><title>jitlib_basic_concepts_01</title>
+<link rel='stylesheet' href='./../../scdoc.css' type='text/css' />
+<link rel='stylesheet' href='./../../frontend.css' type='text/css' />
+<link rel='stylesheet' href='./../../custom.css' type='text/css' />
+<meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
+<script src='./../../scdoc.js' type='text/javascript'></script>
+<script src='./../../docmap.js' type='text/javascript'></script>
+<script src='./../../prettify.js' type='text/javascript'></script>
+<script src='./../../lang-sc.js' type='text/javascript'></script>
+<script type='text/javascript'>var helpRoot='./../..';</script>
+</head>
+<ul id='menubar'></ul>
+<body onload='fixTOC();prettyPrint()'>
+<div class='contents'>
+<div class='header'>
+<div id='label'>SuperCollider TUTORIALS/JITLIB</div>
+<div id='categories'><a href='./../../Browse.html#Libraries>JITLib>Tutorials'>Libraries>JITLib>Tutorials</a>, <a href='./../../Browse.html#Tutorials>JITLib'>Tutorials>JITLib</a></div>
+<h1>jitlib_basic_concepts_01</h1>
+<div id='summary'>some placeholders in supercollider</div>
+</div>
+<div class='subheader'>
+<div id='related'>See also: <a href="./../../Overviews/JITLib.html">JITLib</a>, <a href="./../../Tutorials/JITLib/jitlib_basic_concepts_02.html">jitlib_basic_concepts_02</a></div>
+</div>
+<div id='toc'>
+<ul class='toc'><li class='toc1'><a href='#What%20is%20a%20proxy?'>What is a proxy?</a></li>
+<ul class='toc'><li class='toc2'><a href='#using%20a%20Ref%20as%20a%20proxy'>using a Ref as a proxy</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#using%20a%20Function%20as%20a%20proxy'>using a Function as a proxy</a></li>
+<ul class='toc'></ul></ul><li class='toc1'><a href='#NodeProxy,%20ProxySpace,%20Ndef'>NodeProxy, ProxySpace, Ndef</a></li>
 <ul class='toc'></ul></ul></div>
-<p>this helpfile explains some basic concepts of interactive programming with supercollider and proxy space.
-<h2><a class='anchor' name='a)_what_is_a_proxy?'>a) What is a proxy?</a></h2>
+<p>This helpfile explains some basic concepts of interactive programming with supercollider and proxy space.<h2><a class='anchor' name='What%20is%20a%20proxy?'>What is a proxy?</a></h2>
 
 <p>A proxy is a place holder that is often used to operate on something that does not yet exist. For example, an <em>OutputProxy</em> is used to represent multiple outputs of a ugen, even if only one ugen is created eventually. Any object can have proxy behaviour (it may delegate function calls to different objects for example) but specially functions and references can be used as operands while they keep their referential quality.
+<p>See also: <a href="./../../Classes/OutputProxy.html">OutputProxy</a>, <a href="./../../Classes/Function.html">Function</a>, <a href="./../../Classes/Ref.html">Ref</a>
+<p>Further reading: <a href="./../../Classes/NodeProxy.html">NodeProxy</a>, <a href="./../../Classes/ProxySpace.html">ProxySpace</a>, <a href="./../../Classes/Ndef.html">Ndef</a><h3><a class='anchor' name='using%20a%20Ref%20as%20a%20proxy'>using a Ref as a proxy</a></h3>
+<pre class='code prettyprint lang-sc'>// reference example
 
-<p>see also: <a href="./../../Classes/OutputProxy.html">OutputProxy</a>, <a href="./../../Classes/Function.html">Function</a>, <a href="./../../Classes/Ref.html">Ref</a><h3><a class='anchor' name='using_a_ref_as_a_proxy'>using a Ref as a proxy</a></h3>
-
-<p><pre class='code prettyprint lang-sc'>
-// reference example
-
-// create a new <a class='clslnk' href='./../../Classes/Ref.html'>Ref</a> object
+// create a new Ref object
 y = `(nil);
 
-// you can start to calcuate with y, even if its value is not yet given:
+// you can start to calculate with y, even if its value is not yet given:
 z = y + 10; // returns a function
 
 // now the source can be set:
@@ -43,9 +62,9 @@ z = y + 10; // this fails.
 // an environment without sufficient defaults has the same problem:
 
 currentEnvironment.postln; // anEnvironment
-~x; // access the enironment: there is nothing stored: nil
+~x; // access the environment: there is nothing stored: nil
 ~x = 9; // store something
-~x; 	// now 9 is stored
+~x;     // now 9 is stored
 ~x + 100; // calculate with it
 
 currentEnvironment.postln; // the value is stored in the environment
@@ -53,34 +72,25 @@ currentEnvironment.postln; // the value is stored in the environment
 ~y + ~x; // cause an error: ~y is nil.
 ~y = -90; // set ~y
 
-~y + ~x; // this works.
-</pre>
-<h3><a class='anchor' name='using_a_function_as_a_proxy'>using a Function as a proxy</a></h3>
-
-<p><pre class='code prettyprint lang-sc'>
-// a function can serve the same purpose
+~y + ~x; // this works.</pre>
+<h3><a class='anchor' name='using%20a%20Function%20as%20a%20proxy'>using a Function as a proxy</a></h3>
+<pre class='code prettyprint lang-sc'>// a function can serve the same purpose
 
 y = nil; // empty y first
-z = { y } + 10;	// this does not fail, instead it creates a new function, which
-		// does not fail when evaluating it after y is set to 34.
+z = { y } + 10;    // this does not fail, instead it creates a new function, which
+        // does not fail when evaluating it after y is set to 34.
 
 y = 34;
-z.value;
-</pre>
+z.value;</pre>
 
-<p>see also client side proxies like <a href="./../../Classes/Tdef.html">Tdef</a>, <a href="./../../Classes/Pdefn.html">Pdefn</a>, <a href="./../../Classes/Pdef.html">Pdef</a>, <a href="./../../Classes/Fdef.html">Fdef</a><h2><a class='anchor' name='b)_nodeproxy'>b) NodeProxy</a></h2>
+<p>see also client side proxies like <a href="./../../Classes/Tdef.html">Tdef</a>, <a href="./../../Classes/Pdefn.html">Pdefn</a>, <a href="./../../Classes/Pdef.html">Pdef</a>, <a href="./../../Classes/Fdef.html">Fdef</a><h2><a class='anchor' name='NodeProxy,%20ProxySpace,%20Ndef'>NodeProxy, ProxySpace, Ndef</a></h2>
 
-<p>For interactive programming it can be useful to be able to use something before it is there - it makes evaluation order more flexible and allows to postpone decisions to a later moment. Some preparations have to be done usually - like above, a reference has to be created. In other situations this sort of preparation is not enough, for example if one wants to do maths with running processes on the server.
-
-<p>Audio output on the server has mainly two properties - a <em>calculation rate</em> (audio or control) and a certain <em>number of channels</em>. These are the main static properties of a node proxy, which cannot be changed while it is in use.
-
-<p><pre class='code prettyprint lang-sc'>
-// boot the server
+<p>For interactive programming it can be useful to be able to use something before it is there - it makes evaluation order more flexible and allows to postpone decisions to a later moment. Some preparations have to be done usually - like above, a reference has to be created. In other situations this sort of preparation is not enough, for example if one wants to apply mathematical operations on signals of running processes on the server.<div class='note'><span class='notelabel'>NOTE:</span> Wherever examples are given with Ndef, they apply to ProxySpace and NodeProxy: <code class='code prettyprint lang-sc'>Ndef(\x, 5);</code> is the same as: <code class='code prettyprint lang-sc'>~x = 5;</code> in ProxySpace, and <code class='code prettyprint lang-sc'>a = NodeProxy.new; a.source = 5;</code></div><pre class='code prettyprint lang-sc'>// boot the server
 s.boot;
 
 // two proxies on a server. calculation rate is audio rate, number of channels is 2
-y = <a class='clslnk' href='./../../Classes/NodeProxy.html'>NodeProxy</a>.audio(s, 2);
-z = <a class='clslnk' href='./../../Classes/NodeProxy.html'>NodeProxy</a>.audio(s, 2);
+y = NodeProxy.audio(s, 2);
+z = NodeProxy.audio(s, 2);
 
 // use them in calculation
 z.play;
@@ -88,7 +98,7 @@ z.source = y.sin * 0.2;
 
 
 // set its source now.
-y.source = { <a class='clslnk' href='./../../Classes/Saw.html'>Saw</a>.ar([300, 301], 4*pi) };
+y.source = { Saw.ar([300, 301], 4*pi) };
 
 // the source can be of various type, one of them would be a number:
 y.source = 0.0;
@@ -98,29 +108,32 @@ y.source;
 
 // end them, free their bus number
 y.clear;
-z.clear;
-</pre>
+z.clear;</pre>
 
-<p>In order to provide a simple way of creating node proxies, a proxy space can be used.
-So the above reads like this:
-
-<p><pre class='code prettyprint lang-sc'>
-p = <a class='clslnk' href='./../../Classes/ProxySpace.html'>ProxySpace</a>.push(s.boot); // store proxy space in p so it can be accessed easily.
+<p>In order to provide a simple way of creating node proxies, a proxy space can be used. So the above reads like this:<pre class='code prettyprint lang-sc'>p = ProxySpace.push(s.boot); // store proxy space in p so it can be accessed easily.
 ~z.play;
 
 
 ~z = ~y.sin * 0.2;
 
 
-~y = { <a class='clslnk' href='./../../Classes/Saw.html'>Saw</a>.ar([300, 301], 4*pi) };
+~y = { Saw.ar([300, 301], 4*pi) };
 
 
 // clear the space (all proxies)
 p.clear;
 
 // move out of the proxyspace.
-p.pop;
-</pre>
+p.pop;</pre>
 
-<p>further readings: <a href="./../../Classes/NodeProxy.html">NodeProxy</a>, <a href="./../../Classes/ProxySpace.html">ProxySpace</a>, <a href="./../../Classes/Ndef.html">Ndef</a>
-<p>next: <a href="./../../Tutorials/JITLib/jitlib_basic_concepts_02.html">jitlib_basic_concepts_02</a><div class='doclink'>source: <a href='file:///Users/federicoreuben/Documents/SuperCollider/Fede's/SuperColliderAU/SuperCollider 5.1/SuperCollider.app/Contents/Resources/HelpSource/Tutorials/JITLib/jitlib_basic_concepts_01.schelp'>/Users/federicoreuben/Documents/SuperCollider/Fede's/SuperColliderAU/SuperCollider 5.1/SuperCollider.app/Contents/Resources/HelpSource/Tutorials/JITLib/jitlib_basic_concepts_01.schelp</a><br>link::Tutorials/JITLib/jitlib_basic_concepts_01::</div></div></body></html>
+<p>Another, very common way to access node proxies is <a href="./../../Classes/Ndef.html">Ndef</a> (this is the same as the above, just written with Ndef):<pre class='code prettyprint lang-sc'>Ndef(\z).play;
+
+Ndef(\z, Ndef(\y).sin * 0.2);
+
+Ndef(\y, { Saw.ar([300, 301], 4 * pi) });
+
+Ndef.clear;</pre>
+
+<p>The class Ndef uses <a href="./../../Classes/ProxySpace.html">ProxySpace</a> internally to store its place holders.
+<p>Further reading: <a href="./../../Classes/NodeProxy.html">NodeProxy</a>, <a href="./../../Classes/ProxySpace.html">ProxySpace</a>, <a href="./../../Classes/Ndef.html">Ndef</a>
+<p>next: <a href="./../../Tutorials/JITLib/jitlib_basic_concepts_02.html">jitlib_basic_concepts_02</a><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Tutorials/JITLib/jitlib_basic_concepts_01.schelp'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Tutorials/JITLib/jitlib_basic_concepts_01.schelp</a><br>link::Tutorials/JITLib/jitlib_basic_concepts_01::<br>sc version: 3.8.0</div></div></body></html>
